tests/testWorkflows/invalid_workflows/invalidActionWorkflow.playbook
{
    "name": "invalidActionWorkflow",
    "workflows": [
        {
            "name": "multiactionWorkflow",
            "start": "start",
            "steps": [
                {
                    "action": "invalid",
                    "app": "HelloWorld",
                    "inputs": [
                        {
                            "name": "call",
                            "value": "Hello World"
                        }
                    ],
                    "name": "1",
                    "next_steps": [],
                    "position": {},
                    "risk": 0,
                    "widgets": []
                },
                {
                    "action": "helloWorld",
                    "app": "HelloWorld",
                    "device": "hwTest",
                    "inputs": [],
                    "name": "start",
                    "next_steps": [
                        {
                            "conditions": [
                                {
                                    "action": "regMatch",
                                    "args": [
                                        {
                                            "name": "regex",
                                            "value": "(.*)"
                                        }
                                    ],
                                    "transforms": [
                                        {
                                            "action": "length",
                                            "args": []
                                        }
                                    ]
                                }
                            ],
                            "name": "1",
                            "status": "Success"
                        }
                    ],
                    "position": {},
                    "risk": 0,
                    "widgets": []
                }
            ]
        }
    ]
}